--- a/package.json
+++ b/package.json
@@ -5,7 +5,8 @@
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
     "start": "node src/server.js",
-    "dev": "nodemon src/server.js"
+    "dev": "nodemon src/server.js",
+    "prepare": "husky install"
   },
   "keywords": [],
   "author": "",
@@ -14,13 +15,20 @@
   "dependencies": {
     "cors": "^2.8.5",
     "dotenv": "^17.0.1",
+    "eslint-plugin-react-hooks": "^5.2.0",
     "express": "^5.1.0",
     "helmet": "^8.1.0",
     "morgan": "^1.10.0",
     "pg": "^8.16.3"
   },
   "devDependencies": {
+    "@eslint/js": "^9.30.1",
     "eslint": "^9.30.1",
+    "eslint-plugin-import": "^2.32.0",
+    "eslint-plugin-security": "^3.0.1",
+    "globals": "^16.3.0",
+    "husky": "^8.0.0",
+    "install": "^0.13.0",
     "nodemon": "^3.1.10"
   },
   "type": "module"
