OAuth with facebook

--- a/package.json
+++ b/package.json
@@ -13,12 +13,22 @@
   "license": "ISC",
   "description": "",
   "dependencies": {
+    "bcrypt": "^6.0.0",
+    "cookie-parser": "^1.4.7",
     "cors": "^2.8.5",
+    "crypto": "^1.0.1",
     "dotenv": "^17.0.1",
     "eslint-plugin-react-hooks": "^5.2.0",
     "express": "^5.1.0",
+    "express-session": "^1.18.1",
+    "express-validator": "^7.2.1",
     "helmet": "^8.1.0",
+    "jsonwebtoken": "^9.0.2",
     "morgan": "^1.10.0",
+    "nodemailer": "^7.0.4",
+    "passport": "^0.7.0",
+    "passport-facebook": "^3.0.0",
+    "passport-google-oauth20": "^2.0.0",
     "pg": "^8.16.3"
   },
   "devDependencies": {
@@ -30,6 +40,9 @@
     "husky": "^8.0.0",
     "install": "^0.13.0",
     "nodemon": "^3.1.10"
+  },
+  "lint-staged": {
+    "src/**/*.{js,jsx}": "eslint --fix"
   },
   "type": "module"
 }
