--- a/package.json
+++ b/package.json
@@ -8,13 +8,17 @@
     "dev": "nodemon src/server.js",
     "prepare": "husky install",
     "lint": "eslint .",
-    "lint:fix": "eslint . --fix"
+    "lint:fix": "eslint . --fix",
+    "prisma": "prisma --schema=src/prisma/schema.prisma",
+    "prisma:generate": "prisma generate --schema=src/prisma/schema.prisma",
+    "postinstall": "prisma generate --schema=src/prisma/schema.prisma"
   },
   "keywords": [],
   "author": "",
   "license": "ISC",
   "description": "",
   "dependencies": {
+    "@prisma/client": "^6.11.1",
     "bcrypt": "^6.0.0",
     "cookie-parser": "^1.4.7",
     "cors": "^2.8.5",
@@ -41,7 +45,8 @@
     "globals": "^16.3.0",
     "husky": "^8.0.0",
     "install": "^0.13.0",
-    "nodemon": "^3.1.10"
+    "nodemon": "^3.1.10",
+    "prisma": "^6.11.1"
   },
   "lint-staged": {
     "src/**/*.{js,jsx}": "eslint --fix"
