--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
     "helmet": "^8.1.0",
     "jsonwebtoken": "^9.0.2",
     "morgan": "^1.10.0",
+    "multer": "^2.0.1",
     "nodemailer": "^7.0.4",
     "passport": "^0.7.0",
     "passport-facebook": "^3.0.0",
