--- a/package.json
+++ b/package.json
@@ -36,7 +36,8 @@
     "passport": "^0.7.0",
     "passport-facebook": "^3.0.0",
     "passport-google-oauth20": "^2.0.0",
-    "pg": "^8.16.3"
+    "pg": "^8.16.3",
+    "stripe": "^18.3.0"
   },
   "devDependencies": {
     "@eslint/js": "^9.30.1",
