implement fraud real time notification

--- a/package.json
+++ b/package.json
@@ -46,6 +46,7 @@
     "qrcode": "^1.5.4",
     "qrcode-generator": "^2.0.2",
     "qrcode-terminal": "^0.12.0",
+    "socket.io": "^4.8.1",
     "stripe": "^18.3.0",
     "uuid": "^11.1.0"
   },
