--- a/fastappi/requirements.txt
+++ b/fastappi/requirements.txt
@@ -1,10 +1,10 @@
-fastapi        # Web framework to create the API
-uvicorn        # ASGI server to run the FastAPI app
-scikit-learn   # Provides OneClassSVM and other ML models, and handles prediction logic
-numpy          # For array manipulation and reshaping input data for the models
-joblib         # For loading serialized (pickled) model files saved using joblib
-pydantic       # For validating and parsing request bodies in FastAPI using Python type hints
+fastapi
+uvicorn
+scikit-learn==1.5.1
+numpy==1.26.4
+joblib==1.4.2
+pydantic
 pandas
-lightfm        # For the LightFM recommendation model
-papermill      # for notebook automation 
-sqlalchemy     # For database interactions, ORM capabilities
+lightfm==1.17
+papermill
+sqlalchemy
