--- a/fastappi/requirements.txt
+++ b/fastappi/requirements.txt
@@ -1,10 +1,18 @@
 fastapi
 uvicorn
-scikit-learn==1.5.1
 numpy==1.26.4
 joblib==1.4.2
+scikit-learn==1.5.1
 pydantic
 pandas
-lightfm==1.17
+git+https://github.com/daviddavo/lightfm.git
 papermill
 sqlalchemy
+apscheduler
+ipykernel
+jupyter
+notebook
+psycopg2-binary
+matplotlib
+seaborn
+optuna
