--- a/package.json
+++ b/package.json
@@ -29,11 +29,13 @@
     "cookie-parser": "^1.4.7",
     "cors": "^2.8.5",
     "crypto": "^1.0.1",
+    "date-fns": "^4.1.0",
     "dotenv": "^17.0.1",
     "eslint-plugin-react-hooks": "^5.2.0",
     "express": "^5.1.0",
     "express-session": "^1.18.1",
     "express-validator": "^7.2.1",
+    "googleapis": "^156.0.0",
     "helmet": "^8.1.0",
     "jsonwebtoken": "^9.0.2",
     "morgan": "^1.10.0",
@@ -48,6 +50,7 @@
     "qrcode-terminal": "^0.12.0",
     "socket.io": "^4.8.1",
     "stripe": "^18.3.0",
+    "ua-parser-js": "^2.0.4",
     "uuid": "^11.1.0"
   },
   "devDependencies": {
