--- a/package.json
+++ b/package.json
@@ -50,6 +50,8 @@
     "qrcode-terminal": "^0.12.0",
     "socket.io": "^4.8.1",
     "stripe": "^18.3.0",
+    "swagger-autogen": "^2.23.7",
+    "swagger-ui-express": "^5.0.1",
     "ua-parser-js": "^2.0.4",
     "uuid": "^11.1.0"
   },
