--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -11,7 +11,7 @@ services:
     env_file:
       - .env
     networks:
-      - backend-network
+      - snapreserve-network
 
   fastapi-backend:
     build:
@@ -21,8 +21,8 @@ services:
     ports:
       - "8000:8000"
     networks:
-      - backend-network
+      - snapreserve-network
 
 networks:
-  backend-network:
+  snapreserve-network:
     driver: bridge
